# AIChatBotTemplate

./: Dockerfile  docker-compose.yml  pyproject.toml  pyrightconfig.json
src/: main.py  settings.py
src/bot/handlers/: __init__.py  ai_chat.py  start.py
src/models/: __init__.py  models.py
src/services/: ai_api.py
src/utils/: ai_responder.py  translator.py
